<resources>
    <string name="app_name">Trivia App Clone</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text">Question: 45/89</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="correct_answer">Correct answer</string>
    <string name="incorrect_answer">Incorrect answer</string>
    <string name="text_formatted">Question: %d/%d</string>
    <string name="highest_score">Highest:</string>
    <string name="share_results">Share my results</string>
</resources>