<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#141A33"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/titleTextView"
            style="@style/MainTextStyle"
            android:text="@string/title_text"
            android:textColor="@color/light_gray_txt_color"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewOutOf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/out_of_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="153dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#1B213A"
            android:elevation="12dp"
            app:cardCornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOutOf">

            <TextView
                android:id="@+id/questionTextView"
                style="@style/MainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/question_text_padding"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonTrue"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="56dp"
            android:text="@string/true_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <Button
            android:id="@+id/buttonFalse"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:text="@string/false_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTrue" />

        <Button
            android:id="@+id/buttonNext"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginTop="40dp"
            android:text="@string/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.857"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonFalse" />

        <TextView
            android:id="@+id/scoreTextView"
            style="@style/MainScoreStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.826"
            app:layout_constraintStart_toEndOf="@+id/textViewOutOf"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <TextView
            android:id="@+id/highestScoreText"
            style="@style/MainScoreStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/highest_score"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewOutOf"
            app:layout_constraintTop_toBottomOf="@+id/scoreTextView" />

        <ImageButton
            android:id="@+id/shareButton"
            android:layout_width="54dp"
            android:layout_height="51dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/oval"
            android:contentDescription="@string/share_results"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.027"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonNext"
            app:srcCompat="@drawable/ic_baseline_share_24"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>